# video-crawler

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
docs/: api-reference.md  architecture.md  changelog.md  database.md  deployment.md  platform-adapters.md
src/video_crawler/: __main__.py  config.py
src/video_crawler/api/: app.py  deps.py
src/video_crawler/api/routes/: health.py  rankings.py  videos.py
src/video_crawler/dashboard/: routes.py
src/video_crawler/dashboard/static/css/: dashboard.css
src/video_crawler/dashboard/static/js/: charts.js  dashboard.js  rankings.js  video_detail.js  videos.js
src/video_crawler/dashboard/templates/: base.html  index.html  rankings.html  video_detail.html  videos.html
src/video_crawler/db/: engine.py  repository.py
src/video_crawler/models/: db.py  domain.py
src/video_crawler/notifications/: notifier.py
src/video_crawler/scheduler/: jobs.py
src/video_crawler/utils/: http.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_notifications.py  test_parser.py  test_repository.py  test_youtube_parser.py
tests/fixtures/: bilibili_popular.json  bilibili_ranking.json  youtube_popular.json
